--- a/_config.yml
+++ b/_config.yml
@@ -13,16 +13,16 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
+title: Shreya Saraf
+email: shreya.saraf@hotmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+ Writing your own code might look a bit difficult, but if you follow the steps logically, it is really not that hard. For a better understanding of the software, I recommend that you take a look at the Processing website, the link to which is given above.
+
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+instagram_username: shreya.saraf09
+github_username:  SarafShreya
+twitter_username: ShreyaSaraf09
 
 # Build settings
 markdown: kramdown
